...
			tableDataLoading = true;
			tableLoadCount = tableLoadCount + 1;

			httpget(self, url: "\(source1)?count=\(tableLoadCount)", callback: { (data) in
				if (self.tableData.count == data.count) {
					self.tableDataEnd = true;
					self.tableData[self.tableData.count - 1] = ["title": "Sorry This is the end", "img": "https://upload.wikimedia.org/wikipedia/commons/thumb/9/97/9GAG_new_logo.svg/2000px-9GAG_new_logo.svg.png"];
					// replace the end of the array from loading to finish
				} else {
					self.tableData = data;// store json array for table view reload
				}

				self.tableReload(self.tableView);// reload
...
